fix: align content in center

--- a/_sass/basically-basic/_layout.scss
+++ b/_sass/basically-basic/_layout.scss
@@ -58,6 +58,7 @@ main {
 
 .inner {
   max-width: $xlarge;
+  margin: auto;
 }
 
 /*
